--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
     height:100vh;
     width:100%;
     background-color:#fef6e4;
+    overflow-y: hidden; 
 }
 
 .header
@@ -18,10 +19,18 @@ body
     color:#001858;
 }
 
+.main
+{
+    width:100%;
+    height:100%;
+}
+
 .body
 {
    width:100%;
    color:#172c66;
+   height:30%;
+   padding-top:3%;
 }
 
 
@@ -77,4 +86,45 @@ body
     color:#172c66;
     margin:2% 5% 5% 2%;
     border-right:0.5px solid #172c66;
+}
+
+.explication ul
+{
+    padding-top:3%;
+}
+
+.explication ul li
+{
+    font-size:large;
+}
+
+.difficulte
+{
+    margin:10% 5%;
+}
+
+.difficulte ul
+{
+    list-style-type: none;
+}
+
+.btn-norm
+{
+    background-color: #f582ae;
+    border: #f582ae;
+    font-size:18px;
+}
+
+.btn-dif
+{
+    background-color: #f58282;
+    border:#f58282;
+    font-size:20px;
+}
+
+.btn-tdif
+{
+    background-color: #fe3d3d;
+    border:#fe3d3d;
+    font-size:23px;
 }
